changes done in home page

--- a/onlinneShopping/src/app/home/home.component.html
+++ b/onlinneShopping/src/app/home/home.component.html
@@ -1,7 +1,7 @@
 
 <div class="detel">
     <h1>Welcome To <br> <span> ShopeIt!!</span></h1>
-    <p> You need it and we got It. Don't search in mind, search in Muchmore.<br>
+    <p> You need it and we got It. Don't search in mind, search in ShopIt.<br>
          <br>Find It..! Love It...! Buy It...!</p>
     <a href="#">Shop NoW</a>
 </div>
