--- a/onlinneShopping/src/app/Login/verify/verify.component.html
+++ b/onlinneShopping/src/app/Login/verify/verify.component.html
@@ -2,7 +2,7 @@
   <h1>Login</h1>
   <br>
     <input type="text"  [(ngModel)]="loginId" size="10" placeholder="Username"/>
-    <input type="text" [(ngModel)]="password" size="10" placeholder="Password"/>
+    <input type="password" [(ngModel)]="password" size="10" placeholder="Password"/>
     <br>
     <button type="button" class="btn btn-outline-dark" (click)="onSearch()" value="Login" >LOGIN</button> &nbsp; &nbsp;
     <button type="button" class="btn btn-outline-dark" (click)="onSearch1()" value="Login" >SignUp</button>  
