--- a/onlinneShopping/src/app/Admin/verify-admin/verify-admin.component.html
+++ b/onlinneShopping/src/app/Admin/verify-admin/verify-admin.component.html
@@ -4,7 +4,7 @@
     <h1>ADMIN</h1>
     <br>
       <input type="text"  [(ngModel)]="aId" size="10" placeholder="Username"/>
-      <input type="text" [(ngModel)]="aPassword" size="10" placeholder="Password"/>
+      <input type="password" [(ngModel)]="aPassword" size="10" placeholder="Password"/>
       <br>
       <button type="button" class="btn btn-outline-dark" (click)="onSearch()" value="Login" >LOGIN</button> &nbsp; &nbsp;
      
