--- a/onlinneShopping/src/app/Retailer/verifyretailer/verifyretailer.component.html
+++ b/onlinneShopping/src/app/Retailer/verifyretailer/verifyretailer.component.html
@@ -3,7 +3,7 @@
     <h1>RETAILER</h1>
     <br>
       <input type="text"  [(ngModel)]="rId" size="10" placeholder="Username"/>
-      <input type="text" [(ngModel)]="rPassword" size="10" placeholder="Password"/>
+      <input type="password" [(ngModel)]="rPassword" size="10" placeholder="Password"/>
       <br>
       <button type="button" class="btn btn-outline-dark" (click)="onSearch()" value="Login" >LOGIN</button> &nbsp; &nbsp;
       <button type="button" class="btn btn-outline-dark" (click)="onSearch1()" value="Login" >SignUp</button>  
