changes in home page done

--- a/onlinneShopping/src/app/Product/product-desc/product-desc.component.html
+++ b/onlinneShopping/src/app/Product/product-desc/product-desc.component.html
@@ -109,10 +109,10 @@
 <br>
 <hr>
 <div class="container">
-    <div ><img src="/assets/images/sh3.jpg" alt=""></div>
+    <div ><img src="/assets/images/ja.png" class="jacket"  alt=""></div>
     <div class="content">
         <div class="nav">
-            <span class="logo">sweater</span>
+            <span class="logo">jacket</span>
             <span><i class='fab fa-sistrix' style='font-size:24px'></i></span>
         </div>
         <div class="content-body">
@@ -123,9 +123,10 @@
                 <span>04</span>
             </div>
             <div class="black-label">
-                <span class="title"><b>Christmas Sweater</b></span>
-                <p> sweater themed with a Christmas or winter-style design, often worn during the festive season. 
-                    They are often knitted. A more traditional approach is a roll neck (or "turtleneck") top-pulled garment.
+                <span class="title"><b>Seasons Jacket</b></span>
+                <p> 
+                    jackets themed with a  winter-style design, often worn during the festive season. 
+                    They are often leather. A more traditional approach is a roll neck (or "turtleneck") top-pulled garment.
                     </p>
                     <p>Merry Christmas Print Crewneck Pullover Long Sleeve Shirts </p>
            
