--- a/onlinneShopping/src/app/Product/product-home/product-home.component.html
+++ b/onlinneShopping/src/app/Product/product-home/product-home.component.html
@@ -88,7 +88,7 @@
         <br>
         <br>
         <div class="card">
-          <img src="https://media.istockphoto.com/photos/awful-christmas-sweater-isolated-on-white-picture-id174803272?k=20&m=174803272&s=612x612&w=0&h=dYalAFzz_TAqM2NyPqXUEOFFcDxn7eU06WHz5fRRVHI=" alt="">
+          <img src="assets/images/ja.png" alt="">
           <div class="content">
             <div class="row">
               <div class="details">
